atualizando imagens e ajustando as bordar suaves

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis ante ut libero feugiat pretium non sit amet purus. Aliquam quis ante molestie, laoreet massa a, viverra elit.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="front-end">
         </div>
     </section>
     
@@ -73,7 +73,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis ante ut libero feugiat pretium non sit amet purus. Aliquam quis ante molestie, laoreet massa a, viverra elit.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/data.png" alt="front-end">
         </div>
     </section>
 
@@ -85,7 +85,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis ante ut libero feugiat pretium non sit amet purus. Aliquam quis ante molestie, laoreet massa a, viverra elit.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/backend.png" alt="front-end">
         </div>
     </section>
 
